partman-partitioning (49) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Backing up from the "new partition size" question when resizing a
    partition now goes back to the menu of options for that partition, not
    to the partition tree.
  * Use tune2fs/resize2fs to handle ext2/ext3 resizing, since libparted
    can't deal with the resize_inode feature.
  * Add a progress bar for NTFS resizing, even though it's never advanced at
    the moment.
  * Offer resize option for HFS, HFS+, and HFSX.

 -- Frans Pop <fjp@debian.org>  Wed, 21 Mar 2007 18:14:07 +0100

partman-partitioning (48) unstable; urgency=low

  [ Colin Watson ]
  * Add another update-dev call during NTFS resizing; partition devices can
    be removed and re-added just after committing partition table changes.

 -- Frans Pop <fjp@debian.org>  Wed, 21 Mar 2007 18:08:40 +0100

partman-partitioning (47) unstable; urgency=low

  * Enable resizing of Windows Vista NTFS partitions again. Closes: #379835.
  * Wait for the device file to be created again after resizing an NTFS
    partition.

 -- Frans Pop <fjp@debian.org>  Wed,  7 Mar 2007 22:48:21 +0100

partman-partitioning (46) unstable; urgency=low

  [ Updated translations ]
  * Malayalam (ml.po) by Praveen A

 -- Frans Pop <fjp@debian.org>  Tue, 27 Feb 2007 18:24:57 +0100

partman-partitioning (45) unstable; urgency=low

  [ Colin Watson ]
  * Fix bugs.debian.org URL.

  [ Frans Pop ]
  * Show error dialog if there are errors during ntfsresize operations.

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Belarusian (be.po) by Pavel Piatruk
  * Bulgarian (bg.po) by Damyan Ivanov
  * Danish (da.po) by Claus Hindsgaul
  * Esperanto (eo.po) by Serge Leblanc
  * Georgian (ka.po) by Aiet Kolkhi
  * Kurdish (ku.po) by Amed Çeko Jiyan
  * Latvian (lv.po) by Aigars Mahinovs
  * Malayalam (ml.po) by Praveen A
  * Norwegian Bokmål (nb.po) by Bjørn Steensrud
  * Panjabi (pa.po) by A S Alam