@@ -6,6 +6,9 @@ partman-partitioning (49) UNRELEASED; urgency=low
     to the partition tree.
   * Use tune2fs/resize2fs to handle ext2/ext3 resizing, since libparted
     can't deal with the resize_inode feature.
+  * Run e2fsck before resizing ext2/ext3 partitions; resize2fs is pickier
+    than libparted and requires a check to have been run since the last
+    mount even if the dirty and error flags are unset.
   * Add a progress bar for NTFS resizing, even though it's never advanced at
     the moment.
   * Offer resize option for HFS, HFS+, and HFSX.
